Created a way to up the client with dockere-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   client-angular:
     image: algoritmofifo
     build: .
-    command: ng serve /app/
+    command: ng serve --host 0.0.0.0
     volumes:
       - .:/app  
     ports:
