--- a/.dockerignore
+++ b/.dockerignore
@@ -1,25 +1,6 @@
-**/.classpath
-**/.dockerignore
-**/.env
-**/.git
-**/.gitignore
-**/.project
-**/.settings
-**/.toolstarget
-**/.vs
-**/.vscode
-**/*.*proj.user
-**/*.dbmdl
-**/*.jfm
-**/azds.yaml
-**/bin
-**/charts
-**/docker-compose*
-**/Dockerfile*
-**/node_modules
+node_modules
+.git
+.gitignore
 **/npm-debug.log
-**/obj
-**/secrets.dev.yaml
-**/values.dev.yaml
 LICENSE
 README.md
