FIxed the problem to share the image in production

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,6 +1,10 @@
 node_modules
+npm-debug.log
+Dockerfile*
+docker-compose*
+.dockerignore
 .git
 .gitignore
-**/npm-debug.log
-LICENSE
 README.md
+LICENSE
+.vscode
